# amplifier

./: .amplifier-project  .claudecode  .env.example  .gitignore  .gitmodules  .implementation_summary.md  .mcp.json  .tarignore  AGENTS.md  AGENT_ORCHESTRATION.md  AGENT_QUICKREF.md  AIDER_PR.md  ALL_FEATURES_SUMMARY.md  AMPLIFIER_CAPABILITIES_SYNTHESIS.md  AMPLIFIER_SELF_IMPROVEMENT_PHILOSOPHY.md  AMPLIFIER_UI_INTEGRATION.md  ARCHITECTURE.md  CLAUDE.md  COMMIT_MESSAGE.md  CONTRIBUTING.md  COWORK.md  DESIGNER-INTEGRATION.md  DIAGNOSTIC_STEPS.md  DISCOVERIES-archive.md  DISCOVERIES.md  DOCKER_TEST_RESULTS.md  DOCTOR_VS_VALIDATE.md  DOCUMENTATION_IMPROVEMENTS.md  DOCUMENTATION_REVIEW.md  Dockerfile  EXTRACTION_INPUT_VISUAL.md  FEATURE_TOUR_INDEX.md  FINAL_IMPLEMENTATION_STATUS.md  GEMINI.md  GETTING_STARTED_GUIDE.md  HANDOFF.md  HOW_TO_WRITE_PRD.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INSTALLER.md  (+66 more)
.claude/: AGENTS_CATALOG.md  README.md  settings.json
.claude.backup/: claude.md  settings.local.json
.codex/: README.md  __init__.py  config.toml
.design/: AGENT-INTEGRATION-ANALYSIS.md  ANIMATED-ICONS-USAGE-EXAMPLES.md  DESIGN-SYSTEM-ENFORCEMENT.md  FAB-DECISION-RATIONALE.md  FAB-EXECUTIVE-SUMMARY.md  FAB-IMPLEMENTATION-BRIEF.md  FAB-TURBOPACK-ANALYSIS.md  FAB-VISUAL-REFERENCE.md  ICON-ANIMATION-GUIDELINES.md  INTEGRATION-COMPLETE.md  README.md  test-agents.sh
.gemini/: GEMINI_AGENT_PROMPT_INCLUDE.md  README.md
.githooks/: README.md  pre-commit-aider
.smoke_test_data/: test_all.sh  test_amplifier.sh  test_article.md  test_code.py
agents/: README.md  amplifier-expert.md  customization-guide.md  design-diagnostics.md  module-catalog-expert.md  module-catalog.md  orchestrator.md  quality-guardian.md  requirements-architect.md  ux-wireframe-designer.md
ai-first-principles/: CONTRIBUTORS.md  PROGRESS.md  README.md  TEMPLATE.md  cross-reference-index.md
ai_context/: AMPLIFIER_CLAUDE_CODE_LEVERAGE.md  AUTOCONTEXT-CHANNELS-RESEARCH.md  FRACTALIZED_THINKING_INTEGRATION.md  FRACTALIZED_THINKING_PHILOSOPHY.md  IMPLEMENTATION_PHILOSOPHY.md  MODULAR_DESIGN_PHILOSOPHY.md
ai_working/: COMPREHENSIVE_UIUX_STRUCTURED_DESIGN_ANALYSIS.md  Designing a Microtask-Driven Amplifier CLI Tool with the Claude Code SDK.md  ENGINEERING_JOURNAL_2025-09-23.md  ERRORS_AND_FIXES.md  Implementation Plan_ Claude Code SDK & Microtask Framework.md  MEMENTO_REHYDRATE.md  NEXT_STEPS_ROADMAP.md  README.md  REHYDRATE_RUNBOOK.md  TOOL_BUILDER_LEARNINGS.md  amplifier-built-version.xml  insight_synthesis.json  installer_project.md  modular_architecture_synthesis.md  uiux_pattern_miner.py
ai_working/amplifier-v2/amplifier-dev/amplifier/: DEMO.md  DEVELOPMENT.md  FINAL_SUCCESS.md  Makefile  README.md  SUCCESS.md  USAGE_GUIDE.md  pyproject.github.toml  pyproject.toml  setup_demo.py
ai_working/amplifier-v2/amplifier-dev/amplifier-core/: README.md  pyproject.toml
ai_working/amplifier-v2/amplifier-dev/amplifier-core/amplifier_core/: __init__.py  kernel.py  message_bus.py  plugin.py
ai_working/amplifier-v2/amplifier-dev/amplifier-core/amplifier_core/interfaces/: __init__.py  model.py  tool.py  workflow.py
ai_working/amplifier-v2/amplifier-dev/amplifier-core/examples/: basic_usage.py
ai_working/amplifier-v2/amplifier-dev/amplifier-core/tests/: __init__.py  test_kernel.py
ai_working/amplifier-v2/amplifier-dev/amplifier-mod-agent-registry/: README.md  pyproject.github.toml  pyproject.toml
ai_working/amplifier-v2/amplifier-dev/amplifier-mod-agent-registry/amplifier_mod_agent_registry/: __init__.py  plugin.py
ai_working/amplifier-v2/amplifier-dev/amplifier/amplifier/: __init__.py  __main__.py  cli.py  config.py
ai_working/amplifier-v2/amplifier-dev/amplifier/tests/: test_cli.py  test_config.py
ai_working/module-generator/: DECOMPOSITION_STRATEGY.md  MODULE_GENERATOR_REPORT.md  README.md  example-subagent-spec-validator.md  example_usage.py  pyproject.toml
ai_working/module-generator/docs/: multi_turn_conversation.md  progress-visibility.md
ai_working/module-generator/src/module_generator/: __main__.py  cli.py  models.py  orchestrator.py
ai_working/module-generator/src/module_generator/core/: __init__.py  clarification.py  claude_sdk.py  claude_sdk_multi.py  conversation.py  dialogue.py  file_io.py  response_parser.py  state.py
ai_working/module-generator/src/module_generator/generators/: base.py  implementation_generator.py  interface_generator.py
ai_working/module-generator/src/module_generator/validators/: spec_validator.py
ai_working/module-generator/tests/: __init__.py  test_evaluation.py  test_generated_module.py
amplifier/: README.md  __init__.py  claude_launcher.py  cli.py  codex_tools.py  gemini.py
amplifier_microtask/: README.md  TESTING_GUIDE.md  __init__.py  agent.py  cli.py  context.py  feedback_loop.py  git_checkpoint.py  mock_agent.py  orchestrator.py  parallel_executor.py  progress_monitor.py  pyproject.toml  session.py  stages.py  storage.py  test_parallel_executor.py  validation.py
amplifier_microtask/agents/: __init__.py  code_generator.py  requirements.py  test_generator.py  tool_generator.py
amplifier_microtask/examples/: demo_pipeline.json  simple_task.json
amplifier_microtask/password_validator/: __init__.py
amplifier_microtask/templates/: Makefile.j2  cli_base.py.j2
amplifier_microtask/tests/: test_git_checkpoint.py
behaviors/: amplifier-expert.yaml  module-catalog-expert.yaml  module-catalog.yaml
cli_tools/: recipe.py
codex/: __init__.py
commands/: codex-review.md  create-plan.md  gemini-review.md  guard.md  retro.md  second-opinion.md  subagent-dev.md
components/: README.md
scenarios/recipe_extractor/: HOW_TO_CREATE_YOUR_OWN.md  README.md  __init__.py  __main__.py  converter.py  fetcher.py  main.py  markdown_writer.py  models.py  pyproject.toml  state.py
scenarios/research_assistant/: README.md  __init__.py  __main__.py  cli.py  models.py  pyproject.toml
scenarios/research_assistant/components/: __init__.py  clarifier.py  researcher.py  themes.py  verifier.py  web_scraper.py  writer.py
scenarios/research_assistant/tests/: test_basic.py
(+1322 files in other folders)
