[project]
name = "amplifier"
version = "0.1.0"
description = "Amplifier AI development platform - modular AI assistant with flexible module sourcing"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Microsoft MADE:Explorations Team" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "amplifier-core",
    "amplifier-app-cli",
]

[project.urls]
Homepage = "https://github.com/microsoft/amplifier"
Repository = "https://github.com/microsoft/amplifier"
Issues = "https://github.com/microsoft/amplifier/issues"

[project.scripts]
amplifier = "amplifier_app_cli.main:main"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.uv.sources]
amplifier-app-cli = { git = "https://github.com/microsoft/amplifier-app-cli", branch = "main" }

[tool.hatch.build.targets.wheel]
packages = [
    "amplifier",
]
