[project]
name = "recipe_extractor"
version = "0.1.0"
description = "Extract recipes from websites with automatic scaling and unit conversions"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "recipe-scrapers>=15.0",
    "pint>=0.23",
    "httpx>=0.25",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1",
]

[project.scripts]
recipe_extractor = "recipe_extractor.main:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["recipe_extractor*"]

[tool.pyright]
exclude = [".venv", "**/__pycache__"]
